<resources>
    <string name="app_name">DriverAssist</string>
    <string name="start_driving">Start Driving</string>
    <string name="stop_driving">Stop Driving</string>
    <string name="status_rpm_high_alert">Warning! Exceeding RPM of Eco Limit</string>
    <string name="status_rpm_low_alert">Warning! Below RPM of Eco Limit</string>
    <string name="status_eco_mode">Eco Mode</string>
    <string name="steering_angle">Steering Angle</string>
    <string name="rpm">rpm</string>
    <string name="info">Trip Details</string>
    <string name="speed">Speed</string>
    <string name="trip_id">Enter Trip ID</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="submit">Getting Trip Details</string>
    <string name="no_id">Check your ID</string>
    <string name="check_connection">Check Connection</string>
    <string name="name">Name</string>
    <string name="score">score out of 5</string>
    <string name="okay">Ok</string>
    <string name="driving_summary">Driving Summary</string>
    <string name="yes">Ok</string>
    <string name="status_steer_warning">Warning! High speeds during turn</string>
</resources>

